--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-spacy==3.8.7
-en-core-web-sm==3.8.0 
+fastapi==0.104.1
+uvicorn==0.24.0
+firebase-admin==6.2.0
+python-jose[cryptography]==3.3.0
+python-multipart==0.0.6
+requests==2.31.0
+spacy==3.8.7 
