--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ firebase-admin==6.2.0
 python-jose[cryptography]==3.3.0
 python-multipart==0.0.6
 requests==2.31.0
-spacy==3.8.7 
+spacy==3.8.7
+konlpy==0.6.0
+python-dotenv==1.0.0 
