--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,8 @@ python-multipart==0.0.6
 requests==2.31.0
 spacy==3.8.7
 konlpy==0.6.0
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+openai==1.12.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+httpx==0.24.1 
