--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,43 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-firebase-admin==6.2.0
-python-jose[cryptography]==3.3.0
-python-multipart==0.0.6
-requests==2.31.0
+# Core Web Framework
+fastapi==0.115.14
+uvicorn==0.35.0
+pydantic==2.11.7
+
+# Database
+sqlalchemy>=2.0.0
+psycopg2-binary==2.9.10
+
+# AI/ML Libraries
+openai==1.98.0
 spacy==3.8.7
+sentence-transformers==2.2.2
+transformers==4.35.2
+torch>=2.0.0
+numpy>=1.21.0
+
+# Korean NLP (Optional - requires Java)
 konlpy==0.6.0
-python-dotenv==1.0.0
-openai==1.12.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
-httpx==0.24.1 
+
+# Natural Language Processing
+nltk==3.9.1
+
+# Data Processing
+pandas>=2.0.0
+
+# HTTP Requests
+requests==2.32.4
+
+# Environment Variables
+python-dotenv>=1.0.0
+
+# Authentication (Optional)
+firebase-admin==7.1.0
+
+# spaCy English Model
+# Run: python -m spacy download en_core_web_sm
+# en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+
+# Development Dependencies (Optional)
+# pytest>=7.0.0
+# black>=22.0.0
+# flake8>=5.0.0 
