fix: 허깅페이스 호환성 문제 해결
- transformers 4.35.2 → 4.30.2 (안정 버전)
- torch 버전 고정 (2.0.1)
- tokenizers 0.13.3 추가
- huggingface-hub 0.16.4 명시
- PyTorch 먼저 설치하는 순서 변경
- HuggingFace 모델 테스트 추가
- TROUBLESHOOTING.md 가이드 문서 추가

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,24 @@ pydantic==2.11.7
 sqlalchemy>=2.0.0
 psycopg2-binary==2.9.10
 
-# AI/ML Libraries
+# AI/ML Libraries - Stable Versions for HuggingFace Compatibility
 openai==1.98.0
 spacy==3.8.7
+
+# HuggingFace Ecosystem - Compatible Versions
+transformers==4.30.2
 sentence-transformers==2.2.2
-transformers==4.35.2
-torch>=2.0.0
-numpy>=1.21.0
+tokenizers==0.13.3
+huggingface-hub==0.16.4
+
+# PyTorch - Stable Version
+torch==2.0.1
+torchvision==0.15.2
+
+# Scientific Computing
+numpy==1.24.3
+scipy==1.10.1
+scikit-learn==1.3.0
 
 # Korean NLP (Optional - requires Java)
 konlpy==0.6.0
